BAN-1294: Fix horizontal gaps and icon size in "sort" buttons (#260)
* Fix horizontal gaps and icon size in "sort" btn

* Set default minWidth for SortDropdown buttons
Change styles

* Add gap between sortButton and dropdownButton

--- a/src/pages/LoansPage/components/LoansActiveTable/LoansActiveTable.module.less
+++ b/src/pages/LoansPage/components/LoansActiveTable/LoansActiveTable.module.less
@@ -162,13 +162,3 @@
     width: 86px;
   }
 }
-
-.sortDropdown {
-  & > button {
-    min-width: 230px;
-
-    @media (max-width: 640px) {
-      min-width: 190px;
-    }
-  }
-}
